--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   my-app:
-    build: .
+    image: carllos166/mongo-app:1.0
     ports:
       - 3000:3000 #Host:Container
     environment:
